--- a/geolocal.html
+++ b/geolocal.html
@@ -18,14 +18,20 @@
       <a-text
         value="Barbogio"
         look-at="[gps-camera]"
-        scale="120 120 120"
-        gps-entity-place="latitude: 46.112944 ; longitude: 12.891083;"
+        scale="70 70 70"
+        gps-entity-place="latitude: 46.112917 ; longitude: 12.891028;"
       ></a-text>
       <a-text
         value="Nizar"
         look-at="[gps-camera]"
         scale="70 70 70"
         gps-entity-place="latitude: 45.048472 ; longitude: 13.251972;"
+      ></a-text>
+      <a-text
+        value="Lavoro Elena"
+        look-at="[gps-camera]"
+        scale="70 70 70"
+        gps-entity-place="latitude: 46.068667 ; longitude: 13.236889;"
       ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
