--- a/geolocal.html
+++ b/geolocal.html
@@ -34,7 +34,7 @@
         scale="70 70 70"
         gps-entity-place="latitude: 46.068667 ; longitude: 13.236889;"
       ></a-text>
-      <a-camera gps-camera rotation-reader maxDistance=15> </a-camera>
+      <a-camera gps-camera rotation-reader maxDistance=15 positionMinAccuracy=5> </a-camera>
     </a-scene>
   </body>
 </html>
