--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 	<h1>Temporary landing page for Github pages, for my portfolio</h1>
+	<a href="./simpleorigami/index.html">Selection of components</a>
 	<a href="./componenti/index.html">Selection of components</a>
+	<a href="./arvarie/index.html" target="blank">Lights 3D in Augmented Reality</a>
+	<a href="https://elefantinodesign.com/alberto">On Elefantinodesign</a>
+	
 </body>
 </html>
