--- a/arvarie/index.html
+++ b/arvarie/index.html
@@ -3,7 +3,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<title>Hello, lights 3D AR!</title>
 	<!-- include three.js library -->
-	<script src='js/three.js'></script>
+	<script src='js/three.min.js'></script>
 	<!-- include jsartookit -->
 	<script src="jsartoolkit5/artoolkit.min.js"></script>
 	<script src="jsartoolkit5/artoolkit.api.js"></script>
