--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<div class="contenuti">
 		<div class="testo">
 			<p>
-				Pur utilizzando spesso utilizzando framework complessi, quali ad esempio 
+				Pur utilizzando spesso framework complessi, quali ad esempio 
 				<i>Angular</i>, costruisco componenti web utilizzando javascript,
 				html e css partendo da zero, per studiarne il funzionamento e 
 				migliorarne le prestazioni.
