--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
 		<polyline points="60,0 80,100 100,0" style="fill:rgba(0,255,255,.5);stroke:none;" />
 		<polyline points="80,0 100,100 100,0" style="fill:rgba(0,255,0,.5);stroke:none;" />
 	</svg>
-	<div id="pattern"></div>
-	<div id="antipattern"></div>
 
 	<div id="intestazione">
 		<img id="faccione" src="./faccione.jpg">
 		<div id="titoli">
 			<h1>PORTFOLIO</h1>
 			<h2>Carminati Alberto</h2>
-			<h2>Applicazioni, design, componenti web</h2>
+			<h2>Applicazioni web, didattica, design</h2>
 		</div>
 		<div id="presentazione">
 			<p>
@@ -43,17 +41,62 @@
 	</div>
 
 	<div class="contenuti">
+		<h3>Didattica</h3>
 		<div class="testo">
 			<p>
-				Pur utilizzando spesso utilizzando framework complessi, quali ad esempio 
-				<i>Angular</i>, costruisco componenti web utilizzando javascript,
-				html e css partendo da zero, per studiarne il funzionamento e 
-				migliorarne le prestazioni.
+				Ho avviato il progetto <i>EduNiBa</i>, 
+				che nasce proponendosi di applicare alla didattica della Matematica nuove 
+				tecnologie, immaginando strategie altrettanto nuove comunque basate su una solida
+				esperienza nel mondo dell'istruzione.
+			</p>
+			<p>
+				Ho sviluppato una suite di librerie in <i>Typescript</i> per presentare,
+				risolvere e produrre proceduralmente esercizi, spiegazioni e concetti matematici,
+				nel campo dell'algebra lineare e dell'analisi. Le librerie sono modulari
+				e si integrano con altre librerie specializzate quali <i>Threejs</i>, 
+				<i>KaTeX</i> ed altre.
+			</p>
+			<p>
+				Nell'ambito di un progetto universitario, ho sviluppato un provider 
+				LTI 1.1-compliant di tools per la didattica, basato su <i>MEAN</i> stack,
+				del quale ho gestito frontend e backend.
+				Ho reso disponibile il provider all'Università di Udine tramite la piattaforma 
+				<i>Moodle</i> di ateneo in formato SaaS.
+				Questa attività è nata come progetto didattico sviluppato durante diversi
+				anni, ampliandone respiro ed obiettivi. I risultati sono stati documentati
+				producendo due articoli di carattere scientifico.
+			</p>
+			<p>
+				Questo progetto è gestito in collaborazione con Nizar Salahi Al Asbahi.
+				Per ragioni tecniche e professionali gli esempi di software qui rese
+				disponibili riguardano un singolo strumento:
+				un'app capace di gestire formule in input testuale, codificarle in 
+				<i>LaTeX</i> in tempo reale e quindi disegnarle in uno spazio tridimensionale, 
+				utilizzando <i>ThreeJs</i>. Sono resi disponibili anche i link alle due
+				pubblicazioni scientifiche relative.
+			</p>
+		</div>
+		<div class="link">
+			<a href="./eduniba/grafici.html" target="blank">3D bivariate plot</a>
+			<a href="https://library.iated.org/view/LEPELLERE2020MAT" target="blank">Articolo MatUniUd</a>
+			<a href="http://math.unipa.it/~grim/QRD_Sp8_2020_Lepellere.pdf" target="blank">Articolo GeoUniUd</a>
+		</div>
+	</div>
+
+	<div class="contenuti">
+		<h3>Web Components</h3>
+		<div class="testo">
+			<p>
+				Spesso preferisco costruire componenti web
+				utilizzando soltanto javascript, html e css, partendo quindi da zero.
+				Pur utilizzando spesso framework complessi, quali ad esempio 
+				<i>Angular</i>, ripartire dalle basi è un'occasione per rimanere in 
+				contatto con gli sviluppi del web, spesso nascosti dietro una catena
+				lunghissima, ed a volte opaca, di librerie.
 			</p>
 			<p>
 				Ho creato una piccola galleria di componenti per presentare immagini,
-				video e modelli tridimensionali, con possibilità di personalizzazione
-				anche in tempo reale.
+				video e modelli tridimensionali con un buon livello di interattività.
 			</p>
 		</div>
 		<div class="link">
@@ -62,24 +105,34 @@
 	</div>
 
 	<div class="contenuti">
+		<h3>Web Apps</h3>
 		<div class="testo">
+			<p>
+				Sviluppo spesso piccole app per risolvere problemi
+				incontrati partecipando a concorsi online di varia natura, o semplicemente
+				per sperimentare alcune funzionalità di un linguaggio di programmazione.
+				Alcuni esempi sono la creazione di loghi applicando maschere di ritaglio,
+				il recupero di dati topologici per ricreare un ambiente tridimensionale 
+				nel quale ambientare il render di un progetto architettonico, la
+				preparazione di forme tridimensionali destinate alla stampa 3D.
+			</p>
 			<p>
 				Sto lavorando all'applicazione web <i>Simple Origami</i>, per presentare e 
 				distribuire diagrammi per i miei Origami, costituiti da immagini vettoriali 
 				accompagnate da sostanziali metadata. Avevo già programmato e pubblicato una versione
 				nativa con <i>Android Studio</i> e sto ripercorrendo e migliorando l'idea originale.
-			</p>
-			<p>
 				L'applicazione  sarà supportata da un service worker e sarà quindi installabile,
 				si interfaccerà con un database contentente le immagini codificate e idealmente
 				permetterà agli autori di caricare nuovo materiale.
 			</p>
 			<p>
-				Il link rimanda all'ultima versione stabile disponibile.
+				I link rimandano all'ultima versione stabile disponibile di SimpleOrigami e ad
+				un piccolo portfolio di applicazioni sperimentali, inserite sul mio sito personale.
 			</p>
 		</div>
 		<div class="link">
 			<a href="./simpleorigami/index.html" target="blank">Simple Origami</a>
+			<a href="https://elefantinodesign.com/alberto" target="blank">Portfolio su ED</a>
 		</div>
 	</div>
 
@@ -89,50 +142,24 @@
 	</div> -->
 
 	<div class="contenuti">
-		<p class="testo">
-			Sviluppo diversi progetti di design a nome <i>ElefantinoDesign</i>. Sotto questo
-			"marchio", gestito in collaborazione con un'altra persona, raccolgo esperienze
-			di coding creativo, architettura, Origami ed altro ancora.
-		</p>
+		<h3>Design</h3>
+		<div class="testo">
+			<p>
+				Sviluppo diversi progetti di design a nome <i>ElefantinoDesign</i>. Sotto questo
+				"marchio", gestito in collaborazione con 
+				<a href="https://elefantinodesign.com/elena" target="blank">Elena Feruglio</a>,
+				raccolgo esperienze di coding creativo, architettura, Origami ed altro ancora.
+			</p>
+		</div>
 		<div class="link">
 			<a href="https://elefantinodesign.com" target="blank">ElefantinoDesign</a>
-			<a href="https://elefantinodesign.com/alberto" target="blank">Portfolio su ED</a>
 			<a href="https://www.instagram.com/elefantinodesign/" target="blank">ElefantinoDesign su Instagram</a>
 			<a href="https://www.instagram.com/barbogio/" target="blank">Instagram personale</a>
 		</div>
 	</div>
 
 	<div class="contenuti">
-		<div class="testo">
-			<p>
-				Ho avviato il progetto didattico a quattro mani <i>EduNiBa</i>, 
-				che nasce proponendosi di applicare alla didattica della Matematica le nuove 
-				tecnologie, immaginando nuove strategie basate su una lunga esperienza nel 
-				mondo dell'istruzione.
-			</p>
-			<p>
-				Ho sviluppato una suite di librerie in <i>Typescript</i> per presentare,
-				risolvere e produrre proceduralmente esercizi, spiegazioni e concetti matematici,
-				nel campo dell'algebra lineare e dell'analisi. Le librerie sono modulari
-				e si integrano con altre librerie specializzate.
-			</p>
-			<p>
-				Ho sviluppato un provider LTI-compliant di tools
-				per la didattica, gestendo un <i>full MEAN stack</i>, e l'ho reso disponibile
-				all'Università di Udine tramite la piattaforma <i>Moodle</i> di ateneo.
-			</p>
-			<p>
-				Per ragioni tecniche e professionali, al link è disponibile un singolo strumento
-				capace di gestire formule in input, codificarle in <i>LaTeX</i> in tempo reale e
-				quindi disegnarle in uno spazio tridimensionale, utilizzando <i>ThreeJs</i>.
-			</p>
-		</div>
-		<div class="link">
-			<a href="./eduniba/grafici.html" target="blank">3D bivariate plot</a>
-		</div>
-	</div>
-
-	<div class="contenuti">
+		<h3>Game Dev</h3>
 		<div class="testo">
 			<p>
 				Per hobby ma anche per ampliare le mie conoscenze, mi dedico allo sviluppo di
@@ -143,7 +170,7 @@
 				la qualità si è dimostrata una sfida sempre interessante.
 			</p>
 			<p>
-				Qui propongo un link ad alcuni giochi, ospitati sulla piattaforma itch.io sulla 
+				Qui acccanto i link ad alcuni giochi ospitati sulla piattaforma itch.io, sulla 
 				quale ho partecipato a diverse game jams.
 			</p>
 		</div>
@@ -156,21 +183,40 @@
 	</div>
 
 	<div class="contenuti">
+		<h3>Origami</h3>
 		<div class="testo">
 			<p>
 				Coltivo alcuni hobby prettamente artistici, primo tra tutti quello dell'
 				<a href="https://en.wikipedia.org/wiki/Origami">Origami</a>. Ho inventato
 				diversi modelli originali, faccio parte di gruppi nazionali ed internazionali
 				di autori ed appassionati e frequento, quando possibile, i convegni internazionali.
+				Da anni sono socio attivo del più grande gruppo nazionale, il CDO.
 			</p>
 			<p>
-				Il link proposto presenta una lista parziale delle mie pubblicazioni 
-				su diverse riviste.
+				Questa disciplina ha profonde relazioni con la Geometria e la Matematica, proprio
+				per questo la mia testi di laurea discute la costruibilità di figure
+				tridimensionali con l'Origami. Ho collaborato con il CDO per rendere più accessibili
+				questi aspetti producendo un commento divulgativo ed ho contribuito alle pubblicazioni
+				dedicate alla didattica dello stesso gruppo.
+			</p>
+			<p>
+				I link rimandano alla presentazione di alcuni modelli e ad una lista
+				delle mie pubblicazioni su diverse riviste, entrambe le risorse riguardano
+				solo una minima parte delle mie creazioni.
 			</p>
 		</div>
 		<div class="link">
+			
+			<a href="https://elefantinodesign.com/origami" target="blank">Modelli originali</a>
 			<a href="https://www.giladorigami.com/origami-database/carminati%20alberto" target="blank">Origami Database</a>
+			<a href="https://www.origami-cdo.it/articoli/files/fullereni-colorazioni-origami.html" target="blank">"Parafrasi" divulgativa</a>
+			<a href="https://www.amazon.it/Dinamiche-educative-didattica-lorigami-esperienze/dp/8890591838/ref=pd_bxgy_img_1/257-3679587-6011108?pd_rd_w=lu9ap&pf_rd_p=cfeaf550-9f5f-483e-bd28-a83e8ccd8083&pf_rd_r=JDF4AYC35SC2E5S6H5ES&pd_rd_r=82c42bc0-f0af-42c1-8a67-8daa84299c35&pd_rd_wg=NDrCe&pd_rd_i=8890591838&psc=1" target="blank">Atti Origami e Didattica</a>
 		</div>
+	</div>
+
+	<div id="patternwrapper">
+		<div id="pattern"></div>
+		<div id="antipattern"></div>
 	</div>
 </body>
 </html>
