--- a/eduniba/grafici.html
+++ b/eduniba/grafici.html
@@ -35,10 +35,12 @@
       margin: 0;
     }
     .descrizione{
+      width:80%;
       margin:5px 20px;
     }
     #wrapperone{
       display:flex;
+	    flex-direction:column;
       flex-wrap: wrap;
       align-items: center;
     }
