--- a/eduniba/grafici.html
+++ b/eduniba/grafici.html
@@ -36,7 +36,7 @@
     }
     .descrizione{
       width:80%;
-      margin:5px 20px;
+      margin:5px auto;
     }
     #wrapperone{
       display:flex;
