--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 		</div>
 		<div class="link">
 			<a href="./simpleorigami/index.html" target="blank">Simple Origami</a>
+			<a href="./mybudgetapp/index.html" target="blank">MyBudget</a>
 			<a href="https://elefantinodesign.com/alberto" target="blank">Portfolio su ED</a>
 		</div>
 	</div>
