--- a/index.html
+++ b/index.html
@@ -121,9 +121,13 @@
 				distribuire diagrammi per i miei Origami, costituiti da immagini vettoriali 
 				accompagnate da sostanziali metadata. Avevo già programmato e pubblicato una versione
 				nativa con <i>Android Studio</i> e sto ripercorrendo e migliorando l'idea originale.
-				L'applicazione  sarà supportata da un service worker e sarà quindi installabile,
-				si interfaccerà con un database contentente le immagini codificate e idealmente
-				permetterà agli autori di caricare nuovo materiale.
+			</p>
+			<p>
+				Sto sviluppando l'applicazione <i>MyBudget</i>, imponendomi una progressione precisa nello sviluppo
+				come sfida personale. Ad oggi sono state completate le seguenti tappe:
+				funzionalità e grafica minime, interattività touch e mouse, gestione local storage, layout reactive,
+				funzionalità per definire un color theme, possibilità di scaricare/caricare file csv di backup,
+				service worker e pwa installabile.
 			</p>
 			<p>
 				I link rimandano all'ultima versione stabile disponibile di SimpleOrigami e ad
