--- a/mybudgetapp/index.html
+++ b/mybudgetapp/index.html
@@ -3,6 +3,9 @@
   <title>MyBudgetApp</title>
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="full-screen" content="yes">
+  <meta name="browsermode" content="application">
   <!-- <meta name="description">A simple app with slick graphics, to manage your monthly budget</meta> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
@@ -11,6 +14,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.572967ebdbdb7828.js" type="module"></script><script src="polyfills.569fb114383349ae.js" type="module"></script><script src="main.a48173af1059761e.js" type="module"></script>
+<script src="runtime.572967ebdbdb7828.js" type="module"></script><script src="polyfills.569fb114383349ae.js" type="module"></script><script src="main.6f73654163c455e1.js" type="module"></script>
 
 </body></html>
