--- a/shmup/index.html
+++ b/shmup/index.html
@@ -7,6 +7,8 @@
 	<style type='text/css'>
 
 		body {
+			display:flex;
+			justify-content:center;
 			touch-action: none;
 			margin: 0;
 			border: 0 none;
