--- a/Art/Squares/index.html
+++ b/Art/Squares/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Squares</title>
+    <script src="./p5.min.js"></script>
+    <link rel="stylesheet" href="./styles.css">
 
+    <style>
+        
+    </style>
+</head>
+<body>
+    <div id="container">
+        <video></video>
+        <canvas id="snap-canvas"></canvas>
+        <canvas id="bw-canvas"></canvas>
+        <div class="no-permission-container hide">
+            <h1>Without permission to use camera this app won't do anything, sorry :(</h1>
+            <br>
+            <h1>You'll have to reset permissions, reload and then click "allow" when asked</h1>
+        </div>
+        <div class="device-button-container hide">
+        </div>
+        <div class="action-button-container hide">
+        </div>
+    </div>
+    <script src="./main.js" type="module"></script>
+</body>
+</html>
