--- a/Art/Squares/index.html
+++ b/Art/Squares/index.html
@@ -17,6 +17,8 @@
         <video></video>
         <canvas id="snap-canvas"></canvas>
         <canvas id="bw-canvas"></canvas>
+        <canvas id="thr-canvas"></canvas>
+        <canvas id="res-canvas"></canvas>
         <div class="no-permission-container hide">
             <h1>Without permission to use camera this app won't do anything, sorry :(</h1>
             <br>
