--- a/Art/Squares/index.html
+++ b/Art/Squares/index.html
@@ -28,6 +28,8 @@
         </div>
         <div class="action-button-container hide">
         </div>
+        <div class="canvas-button-container hide">
+        </div>
     </div>
     <script src="./main.js" type="module"></script>
 </body>
