New component version

--- a/Art/Squares/index.html
+++ b/Art/Squares/index.html
@@ -1,36 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Squares</title>
-    <script src="./p5.min.js"></script>
-    <link rel="stylesheet" href="./styles.css">
-
-    <style>
-        
-    </style>
-</head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Squares</title>
+<script defer src="components.bundle.js"></script><script defer src="index.bundle.js"></script><link href="index.css" rel="stylesheet"></head>
 <body>
-    <div id="container">
-        <video></video>
-        <canvas id="snap-canvas"></canvas>
-        <canvas id="bw-canvas"></canvas>
-        <canvas id="thr-canvas"></canvas>
-        <canvas id="res-canvas"></canvas>
-        <div class="no-permission-container hide">
-            <h1>Without permission to use camera this app won't do anything, sorry :(</h1>
-            <br>
-            <h1>You'll have to reset permissions, reload and then click "allow" when asked</h1>
-        </div>
-        <div class="device-button-container hide">
-        </div>
-        <div class="action-button-container hide">
-        </div>
-        <div class="canvas-button-container hide">
-        </div>
-    </div>
-    <script src="./main.js" type="module"></script>
+  <div id="canvas-container"></div>
 </body>
 </html>
