--- a/Art/Squares/index.html
+++ b/Art/Squares/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Squares</title>
-<script defer src="components.bundle.js"></script><script defer src="index.bundle.js"></script><link href="index.css" rel="stylesheet"></head>
-<body>
-  <div id="canvas-container"></div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Squares</title><script defer="defer" src="components.bundle.js"></script><script defer="defer" src="index.bundle.js"></script><link href="index.css" rel="stylesheet"></head><body><div id="canvas-container"></div></body></html>
