--- a/SillyThing/index.html
+++ b/SillyThing/index.html
@@ -5,9 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Silly Message Generation</title>
 	<link rel="stylesheet" href="./styles.css">
-	<script src="./script.js"></script>
+	<script src="./script.js" type="module"></script>
 </head>
 <body>
-	
 </body>
 </html>
