Update index.html bis

--- a/FoldIt/index.html
+++ b/FoldIt/index.html
@@ -230,8 +230,9 @@
 				player can vouch to extend the game agreeing over a number of additional turns. Any player at this point can also
 				declare defeat (thus losing the match) or choose to sit out (and wait for the results without altering
 				the model any further), forfeiting their ability to decide upon the extension's length but locking the
-				game: if one or more player are "out", defeated or sitting, the next extension will be the last.
-				Only requisite is a consensus between all involved.
+				game: if one or more player are "out", defeated or sitting, the next extension will be the last. Otherwise,
+				players can agree upon aother extensions each time one runs out.
+				Only requisite for any decision is a consensus between all involved.
 			</p>
 		</div>
 
@@ -282,8 +283,9 @@
 				(perdendo così la partita) o di chiamarsi fuori (e attendere i risultati del gioco senza più toccare
 				il proprio modello), rinunciando così alla possibilità di decidere la lunghezza dell'estensione ma
 				"bloccando" il gioco: se anche un solo giocatore è "fuori" in uno dei due sensi appena descritti,
-				l'estensione che si decide in quel momento sarà anche l'ultima possibile. L'unico requisito per queste
-				decisioni è l'unanimità tra tutti i giocatori.
+				l'estensione che si decide in quel momento sarà anche l'ultima possibile. In caso contrario, al termine
+				di ogni estensione i giocatori possono decidere di estendere ulteriormente il gioco.
+				L'unico requisito per queste decisioni è l'unanimità tra tutti i giocatori.
 			</p>
 		</div>
 	</div>
