--- a/FoldIt/index.html
+++ b/FoldIt/index.html
@@ -231,7 +231,7 @@
 				declare defeat (thus losing the match) or choose to sit out (and wait for the results without altering
 				the model any further), forfeiting their ability to decide upon the extension's length but locking the
 				game: if one or more player are "out", defeated or sitting, the next extension will be the last. Otherwise,
-				players can agree upon aother extensions each time one runs out.
+				players can agree upon another extension each time one runs out.
 				Only requisite for any decision is a consensus between all involved.
 			</p>
 		</div>
